welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program: error: not found: value move
		move(getY(),getDirection() == Direction.NORTH); 
                ^Program:2: error: not found: type Booleen
def versLAvant (nbPas : Int, versLAvant : Booleen) {if (versLAvant) avance(nbPas) else recule(nbPas)}  
                                          ^